# nosql-delta-bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  portfolio-projects.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  roadmap.md
examples/: airflow_mongo_to_delta.py  generate_dlq_sample.py  inspect_output.py  mongo_to_delta.py
examples/data/: incoming.json  reference.json
nosql_delta_bridge/: cli.py  coerce.py  dlq.py  flatten.py  infer.py  writer.py
tests/: test_azure_integration.py  test_cli.py  test_coerce.py  test_dlq.py  test_flatten.py  test_infer.py  test_writer.py
tests/fixtures/: orders.json  users.json
