[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nosql-delta-bridge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.17",
    "fsspec>=2023.1",
    "s3fs>=2023.1",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "adlfs>=2023.1",
]

[project.scripts]
bridge = "nosql_delta_bridge.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (Docker, cloud emulators)",
]
