[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nosql-delta-bridge"
version = "0.1.1"
description = "NoSQL to Delta Lake ingestion with schema enforcement, type coercion, and a dead-letter queue. Nothing silently crashes your pipeline."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Luiz Henrick Gomes de Oliveira", email = "luizhenrickgomes@gmail.com" }
]
keywords = ["delta-lake", "nosql", "mongodb", "etl", "data-engineering", "schema-inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.17",
    "fsspec>=2023.1",
    "s3fs>=2023.1",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "adlfs>=2023.1",
]

[project.urls]
Homepage = "https://github.com/lhrick/nosql-delta-bridge"
Source = "https://github.com/lhrick/nosql-delta-bridge"
"Bug Tracker" = "https://github.com/lhrick/nosql-delta-bridge/issues"

[project.scripts]
bridge = "nosql_delta_bridge.cli:app"

[tool.setuptools.packages.find]
include = ["nosql_delta_bridge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (Docker, cloud emulators)",
]
